tests/rosetta/out/Smalltalk/approximate-equality.out
/workspace/mochi/tests/rosetta/out/Smalltalk/approximate-equality.st:6: parse error, expected integer literal or floating-point literal or decimal literal
